--- a/pagina-login/login.html
+++ b/pagina-login/login.html
@@ -17,7 +17,7 @@
     <section class="login">
         <form action="/login" method="post">
             <section>
-                <h1>Login <img src="/pagina-1/style/img/sunbed.png" alt=""></h1>
+                <h1>Login <img src="/pagina-1/style/sunbed.png" alt=""></h1>
                 <br>
               <label for="usuario"></label>
               <input type="text" name="usuario" id="usuario" placeholder="Usuário">
