pagina que faltava

--- a/pagina-master/pousada.html
+++ b/pagina-master/pousada.html
@@ -5,26 +5,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="stetic/css/main.css">
+  <link rel="stylesheet" href="../Static/css/style-master.css">
   <title>Pousada</title>
 </head>
 
 <body>
   <header>
     <div class="logo">
-      <a href="#"><img src="../Pousada/stetic/img/logo_cor.png" alt="logo"></a>
+      <a href="../projeto/routes/home.js"><img src="../Static/imgs/logo_cor.png" alt="logo"></a>
     </div>
 
     <nav>
       <ul>
-        <li><a href="#">Início</a></li>
+        <li><a href="../projeto/routes/home.js">Início</a></li>
         <li><a href="#">Serviços</a></li>
         <li><a href="#">Calendário</a></li>
         <li><a href="#">Contato</a></li>
       </ul>
       <div class="conta">
-        <a class="button" href="https://google.com"> Minha conta </a>
+        <a class="button" href="../projeto/routes/login.js"> Minha conta </a>
       </div>
     </nav>
 
@@ -53,7 +52,7 @@
 </body>
 
 <footer>
-  <div id="imagem"><img src="../Pousada/stetic/img/logo_branco.png" alt="">
+  <div id="imagem"><img src="../Static/imgs/logo_branco.png" alt="">
     <p>Lorem ipsum dolor sit amet,
       consectetur adipiscing elit.
       Ut porta, lectus non eleifend
@@ -76,16 +75,16 @@
   </div>
 
   <div id="contato">
-    <a href="#"><img src="../Pousada/stetic/img/localizacao.png" alt="">Avenida x, nº 100, Leste
+    <a href="#"><img src="../Static/imgs/localizacao.png" alt="">Avenida x, nº 100, Leste
       São Paulo, 31265-000</a>
-    <a href="#"><img src="../Pousada/stetic/img/telefone.png" alt=""> (11) 3333 - 3333</a>
-    <a href="#"> <img src="../Pousada/stetic/img/whatsapp.png" alt="">(11) 9999 - 3333</a>
-    <a href="#"> <img src="../Pousada/stetic/img/o-email.png" alt="">contato@sunrise.com</a>
+    <a href="#"><img src="../Static/imgs/telefone.png" alt=""> (11) 3333 - 3333</a>
+    <a href="#"> <img src="../Static/imgs/whatsapp.png" alt="">(11) 9999 - 3333</a>
+    <a href="#"> <img src="../Static/imgs/o-email.png" alt="">contato@sunrise.com</a>
   </div>
 </footer>
 <div id="footer">
-  <img src="../Pousada/stetic/img/facebook.png" alt=""><a href="#">@facebook</a>
-  <img src="../Pousada/stetic/img/instagram.png" alt=""><a href="#">@instagram</a>
+  <img src="../Static/imgs/facebook.png" alt=""><a href="#">@facebook</a>
+  <img src="../Static/imgs/instagram.png" alt=""><a href="#">@instagram</a>
 </div>
 
 </html>
